--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
     <script src="./tictactoe.js" async></script>
 </head>
 <body>
-    
-    <h1>Tic-Tac-Toe</h1>
+
+    <header>
+        <div>Tic-Tac-Toe</div>
+    </header>
+
+    <content id="gameboard-area"> Gameboard Area
+
+
+    </content>
+
+    <footer>
+        <p>Created by: <img src="./Assets/GitHub-Mark-Light-32px.png" height="18px" width="18px"><a href ="https://github.com/dtariq1995"> Daanyaal Tariq</a></p>
+    </footer>
+
+
 
 </body>
 </html>
