--- a/index.html
+++ b/index.html
@@ -14,10 +14,21 @@
         <div>Tic-Tac-Toe</div>
     </header>
 
-    <content id="gameboard-area"> Gameboard Area
+    <container id="gameboard-area">
 
+        <container id="gameboard-grid">
+            <div id="top-left" class="grid-square"></div>
+            <div id="top-center" class="grid-square"></div>
+            <div id="top-right" class="grid-square"></div>
+            <div id="middle-left" class="grid-square"></div>
+            <div id="middle-center" class="grid-square"></div>
+            <div id="middle-right" class="grid-square"></div>
+            <div id="bottom-left" class="grid-square"></div>
+            <div id="bottom-center" class="grid-square"></div>
+            <div id="bottom-right" class="grid-square"></div>
+        </container>
 
-    </content>
+    </container>
 
     <footer>
         <p>Created by: <img src="./Assets/GitHub-Mark-Light-32px.png" height="18px" width="18px"><a href ="https://github.com/dtariq1995"> Daanyaal Tariq</a></p>
