Minor changes and added onclick function to grid

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <container id="gameboard-area">
 
         <container id="gameboard-grid">
-            <div id="top-left" class="grid-square"></div>
-            <div id="top-center" class="grid-square"></div>
-            <div id="top-right" class="grid-square"></div>
-            <div id="middle-left" class="grid-square"></div>
-            <div id="middle-center" class="grid-square"></div>
-            <div id="middle-right" class="grid-square"></div>
-            <div id="bottom-left" class="grid-square"></div>
-            <div id="bottom-center" class="grid-square"></div>
-            <div id="bottom-right" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="top-left" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="top-center" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="top-right" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="middle-left" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="middle-center" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="middle-right" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="bottom-left" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="bottom-center" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare()" id="bottom-right" class="grid-square"></div>
         </container>
 
     </container>
