Added functionality for users to choose square

--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
     <container id="gameboard-area">
 
         <container id="gameboard-grid">
-            <div onclick="Gameboard.chooseSquare()" id="top-left" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="top-center" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="top-right" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="middle-left" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="middle-center" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="middle-right" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="bottom-left" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="bottom-center" class="grid-square"></div>
-            <div onclick="Gameboard.chooseSquare()" id="bottom-right" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="0" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="1" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="2" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="3" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="4" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="5" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="6" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="7" class="grid-square"></div>
+            <div onclick="DisplayController.chooseSquare(this.id)" id="8" class="grid-square"></div>
         </container>
 
     </container>
