--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
 <body>
 
     <header>
-        <div></div>
+
+        <div class="player-heading">
+            <div>PLAYER ONE</div>
+            <input class="player-input" type="text" id="Name" name="Name" maxlength="16">
+        </div>
+
+        <div class="player-heading">
+            <div>PLAYER TWO</div>
+            <input class="player-input" type="text" id="Name" name="Name" maxlength="16">
+        </div>
+
     </header>
 
     <container id="gameboard-area">
