--- a/index.html
+++ b/index.html
@@ -27,18 +27,22 @@
     <container id="gameboard-area">
 
         <container id="gameboard-grid">
-            <div onclick="DisplayController.chooseSquare(this.id)" id="0" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="1" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="2" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="3" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="4" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="5" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="6" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="7" class="grid-square"></div>
-            <div onclick="DisplayController.chooseSquare(this.id)" id="8" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="0" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="1" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="2" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="3" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="4" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="5" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="6" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="7" class="grid-square"></div>
+            <div onclick="Gameboard.chooseSquare(this.id)" id="8" class="grid-square"></div>
         </container>
 
+        <div id="winner-area">Winner</div>
+
     </container>
+
+
 
     <footer>
         <p>Created by: <img src="./Assets/GitHub-Mark-Light-32px.png" height="18px" width="18px"><a href ="https://github.com/dtariq1995"> Daanyaal Tariq</a></p>
