Added display for winner and stopped game on win

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div onclick="Gameboard.chooseSquare(this.id)" id="8" class="grid-square"></div>
         </container>
 
-        <div id="winner-area">Winner</div>
+        <div id="winner-area"></div>
 
     </container>
 
